--- a/lient/index.html
+++ b/lient/index.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="LexiSense - AI-powered contract analysis and management platform">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <title>LexiSense - AI Contract Analysis</title>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/client/src/main.tsx"></script>
 </body>
 </html>
