--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,14 +1,16 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="LexiSense - AI-powered contract analysis and management platform">
-  <title>LexiSense - AI Contract Analysis</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script type="module" src="/client/src/main.tsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="LexiSense - AI-powered contract analysis and management platform"
+    />
+    <title>LexiSense - AI Contract Analysis</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/client/src/main.tsx"></script>
+  </body>
 </html>
